--- a/src/assets/Css/Login-Register.css
+++ b/src/assets/Css/Login-Register.css
@@ -1,10 +1,6 @@
-.login-container {
-    background-color: var(--primary-light);
-}
-
 .area-box {
     width: 930px;
-    background-color: white;
+    background-color: rgba(61, 139, 253, 0.4);
     box-shadow: 0 2px 4px rgba(59, 19, 19, 0.2);
 }
 
@@ -43,4 +39,11 @@
 
 .first-name {
     margin-right: 10px;
+}
+
+.eye-btn {
+    border: none;
+    background-color: white;
+    padding: 6px 12px;
+    border-radius: 5px;
 }
