--- a/src/assets/Css/Profile.css
+++ b/src/assets/Css/Profile.css
@@ -90,3 +90,10 @@
 .profile-card .profile-info {
     color: white;
 }
+
+/* .profile-card .profile-info .{
+    width: 100px;
+    border-radius: 100px;
+    margin-top: -100px;
+    border: 2px solid white;
+} */
