--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
     --primary-color: #3D8BFD;
     --primary-light: #6aa5ff;
     --primary-dark: #2c67c0;
+    --primary-opacity-40: rgba(61, 139, 253, 0.4);
     --white-color: #fff;
     --white-dark: #bdbdbd;
     --secondary-color: #dc3545;
