--- a/src/assets/Css/LandingPage.css
+++ b/src/assets/Css/LandingPage.css
@@ -1,18 +1,27 @@
 .hero-wrapper {
     background-color: var(--primary-color);
     width: 100%;
+    box-shadow: 3px 3px 3px rgba(59, 19, 19, 0.2);
 }
 
-.feature .feature-card {
+.feature .feature-card,
+.feature .feature-card-user {
     width: 500px;
     height: 600px;
     margin: 10px;
 }
 
+.feature .feature-card-user {
+    transition: var(--btn-transition);
+}
+
+.feature .feature-card-user:hover {
+    transform: translateY(-10px);
+}
+
 .about-container {
     background-color: var(--primary-color);
 }
-
 
 .hero-wrapper .btn-readmore {
     padding: 10px 20px;
@@ -69,6 +78,7 @@
 
 .carousel .btn-faq {
     padding: 10px 20px;
+    width: auto;
     border: none;
     color: var(--primary-color);
     background-color: white;
@@ -111,4 +121,15 @@
 
 .modal-dialog .modal-header {
     border-bottom: none;
+}
+
+.btn-berikan-ulasan {
+    width: auto;
+    color: white;
+    border-radius: 5px;
+    background-color: var(--primary-color);
+}
+
+.btn-berikan-ulasan:hover {
+    background-color: var(--primary-dark);
 }
