--- a/src/assets/Css/Login-Register.css
+++ b/src/assets/Css/Login-Register.css
@@ -1,6 +1,6 @@
 .area-box {
     width: 930px;
-    background-color: rgba(61, 139, 253, 0.4);
+    background-color: var(--primary-opacity-40);
     box-shadow: 0 2px 4px rgba(59, 19, 19, 0.2);
 }
 
@@ -41,9 +41,22 @@
     margin-right: 10px;
 }
 
+.loginRegister-wrapper .form-control {
+    border-radius: 0;
+}
+
+.input-group {
+    position: relative;
+}
+
 .eye-btn {
+    position: absolute;
+    z-index: 9999;
+    right: 0;
+    top: 50%;
+    width: auto;
+    transform: translateY(-50%);
+    background: none;
     border: none;
-    background-color: white;
-    padding: 6px 12px;
-    border-radius: 5px;
+    cursor: pointer;
 }
