fixing forget password

--- a/src/assets/Css/Login-Register.css
+++ b/src/assets/Css/Login-Register.css
@@ -53,6 +53,7 @@
     position: absolute;
     z-index: 9999;
     right: 0;
+    padding: 10px;
     top: 50%;
     width: auto;
     transform: translateY(-50%);
