--- a/src/assets/Css/LandingPage.css
+++ b/src/assets/Css/LandingPage.css
@@ -125,6 +125,8 @@
 
 .btn-berikan-ulasan {
     width: auto;
+    padding: 5px 10px;
+    border: none;
     color: white;
     border-radius: 5px;
     background-color: var(--primary-color);
