--- a/src/assets/Css/News.css
+++ b/src/assets/Css/News.css
@@ -1,3 +1,7 @@
+.article-content-wrapper {
+    padding-top: 140px;
+}
+
 .big-article-card {
     padding: 50px 0;
     background-color: var(--primary-opacity-40);
