--- a/src/assets/Css/Contact.css
+++ b/src/assets/Css/Contact.css
@@ -1,5 +1,5 @@
 .left-wrapper .left-side {
-    background-image: url(../assets/contactbaground.png);
+    background-image: url(../Image/contactbaground.png);
     background-repeat: no-repeat;
     background-size: cover;
 
